Created the backend api for applications collection in Node.js

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "jobapplog-backend",
     "version": "1.0.0",
-    "description": "Front-end of the Job Application Tracking app",
+    "description": "Back-end of the Job Application Tracking app",
     "main": "app.js",
     "scripts": {
         "start": "nodemon server.js",
