--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
+        "styled-components": "^5.1.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
