--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
         "@babel/preset-env": "^7.11.0",
         "@babel/preset-react": "^7.10.4",
         "babel-loader": "^8.1.0",
+        "i18next": "^19.7.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-i18next": "^11.7.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
         "styled-components": "^5.1.1",
