--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@babel/core": "^7.11.1",
         "@babel/preset-env": "^7.11.0",
         "@babel/preset-react": "^7.10.4",
+        "axios": "^0.20.0",
         "babel-loader": "^8.1.0",
         "i18next": "^19.7.0",
         "react": "^16.13.1",
