--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,23 @@
     "author": "Edgar Nava",
     "license": "ISC",
     "dependencies": {
-        "@babel/core": "^7.11.1",
-        "@babel/preset-env": "^7.11.0",
+        "@babel/core": "^7.11.6",
+        "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.10.4",
         "axios": "^0.20.0",
         "babel-loader": "^8.1.0",
-        "i18next": "^19.7.0",
+        "core-js": "^3.6.5",
+        "html-webpack-plugin": "^4.5.0",
+        "i18next": "^19.8.2",
+        "i18next-browser-languagedetector": "^6.0.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-i18next": "^11.7.1",
+        "react-i18next": "^11.7.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
-        "styled-components": "^5.1.1",
-        "webpack": "^4.44.1",
+        "regenerator-runtime": "^0.13.7",
+        "styled-components": "^5.2.0",
+        "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
     }
