--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,20 @@
         "axios": "^0.20.0",
         "babel-loader": "^8.1.0",
         "core-js": "^3.6.5",
+        "css-loader": "^5.0.0",
         "html-webpack-plugin": "^4.5.0",
         "i18next": "^19.8.2",
         "i18next-browser-languagedetector": "^6.0.1",
+        "mini-css-extract-plugin": "^1.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-i18next": "^11.7.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.3",
         "regenerator-runtime": "^0.13.7",
+        "sass": "^1.27.0",
+        "sass-loader": "^10.0.3",
+        "style-loader": "^2.0.0",
         "styled-components": "^5.2.0",
         "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12",
